# tripplanner-ai

./: .env.example  .gitignore  HOW_TO_RUN.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: init.sql
docs/: phase1_build_log.md  phase2_build_log.md  phase3_build_log.md  phase4_build_log.md  phase5_build_log.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
prompts/: flight_agent_v1.md
src/ai/mcp_server/: cache.py  config.py  models.py  server.py  tools.py
src/backend/: Dockerfile
src/backend/app/: main.py
src/backend/app/api/: deps.py
src/backend/app/api/routes/: auth.py  health.py  trips.py
src/backend/app/core/: config.py  security.py
src/backend/app/db/: redis.py  session.py
src/backend/app/models/: __init__.py  agent_run.py  embedding.py  itinerary.py  trip.py  user.py
src/backend/app/schemas/: __init__.py  agent_run.py  auth.py  itinerary.py  trip.py
tests/contract/: test_mcp_contracts.py
tests/integration/: integration_conftest.py  test_health_integration.py
tests/unit/: conftest.py  test_auth.py  test_health.py  test_trips.py
tests/unit/mcp/: test_tools.py
