[tool.poetry]
name = "tripplanner-ai"
version = "0.1.0"
description = "Multi-agent AI travel planner — flights, hotels, activities & itineraries"
authors = ["shauryaman28"]
license = "MIT"
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"

# ── Web Framework ────────────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
python-multipart = "^0.0.9"

# ── Database ─────────────────────────────────────────────────────
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"          # async Postgres driver

# ── Cache ────────────────────────────────────────────────────────
redis = {extras = ["hiredis"], version = "^5.0.0"}

# ── Auth ─────────────────────────────────────────────────────────
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# ── Config / Env ─────────────────────────────────────────────────
pydantic-settings = "^2.3.0"
python-dotenv = "^1.0.0"

# ── LLMs ─────────────────────────────────────────────────────────
google-generativeai = "^0.7.0"      # Gemini Flash (Phase 6+)
anthropic = "^0.28.0"               # Claude Haiku (Phase 12+)
openai = "^1.35.0"                  # Embeddings (Phase 14+)

# ── Agent Framework ───────────────────────────────────────────────
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
langchain-anthropic = "^0.1.0"
langgraph = "^0.1.0"

# ── External APIs ─────────────────────────────────────────────────
amadeus = "^8.1.0"                  # Flights + Hotels (Phase 3)
httpx = "^0.27.0"                   # Async HTTP client

# ── Observability ─────────────────────────────────────────────────
langsmith = "^0.1.0"                # LLM tracing (Phase 26)
sentry-sdk = {extras = ["fastapi"], version = "^2.7.0"}  # Error tracking (Phase 27)

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"                   # test client
ruff = "^0.5.0"                     # linter + formatter
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
